--- a/platformio.ini
+++ b/platformio.ini
@@ -31,3 +31,4 @@ lib_deps =
 	jgromes/RadioLib@^6.4.0
 	bblanchon/ArduinoJson@^7.0.4
 	madhephaestus/ESP32Servo@^1.1.2
+	elc0mpa/OLED_SSD1306_Chart@^1.3.2
